Fixed footer margins and spacing.

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2878,7 +2878,7 @@ ul.staggered-list li {
 }
 
 .page-footer {
-  padding-top: 20px;
+  padding-top: 10px;
   color: #fff;
   background-color: #ee6e73;
 }
@@ -3386,6 +3386,7 @@ nav ul a span.badge {
 .container .row {
   margin-left: -0.75rem;
   margin-right: -0.75rem;
+  margin-bottom: 25px;
 }
 
 .section {
@@ -3406,6 +3407,16 @@ nav ul a span.badge {
 }
 
 .row {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
+.row1 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5px;
+}
+.row2 {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
@@ -3861,6 +3872,7 @@ nav ul a span.badge {
   }
   .row .col.l4 {
     width: 33.3333333333%;
+    /* height: 500px; */
     margin-left: auto;
     left: auto;
     right: auto;
@@ -8309,10 +8321,19 @@ input[type=range]:focus::-ms-fill-upper {
   visibility: visible;
   -webkit-animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
           animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
-  -webkit-transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
-  transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
-  transition: opacity .3s, transform .3s, visibility 0s 1s;
-  transition: opacity .3s, transform .3s, visibility 0s 1s, -webkit-transform .3s;
+  -webkit-transition: opacity .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s 1s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s 1s,
+ -webkit-transform .3s;
 }
 
 .tap-target {
@@ -8365,10 +8386,19 @@ input[type=range]:focus::-ms-fill-upper {
 
 .tap-target-wave::after {
   visibility: hidden;
-  -webkit-transition: opacity .3s, visibility 0s, -webkit-transform .3s;
-  transition: opacity .3s, visibility 0s, -webkit-transform .3s;
-  transition: opacity .3s, transform .3s, visibility 0s;
-  transition: opacity .3s, transform .3s, visibility 0s, -webkit-transform .3s;
+  -webkit-transition: opacity .3s,
+ visibility 0s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ visibility 0s,
+ -webkit-transform .3s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s;
+  transition: opacity .3s,
+ transform .3s,
+ visibility 0s,
+ -webkit-transform .3s;
   z-index: -1;
 }
 
